Added User Privilages

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -119,7 +119,7 @@
 
             <button type="submit">Zaloguj</button>
         </form>
-        <p>Nie masz konta? <a href="{% url 'accounts:register' %}">Zarejestruj się</a></p>
+        <p>Nie masz konta? <a href="{% url 'accounts:account_type' %}">Zarejestruj się</a></p>
     </div>
 </body>
 </html>
